--- a/basic/pages/6_state.html
+++ b/basic/pages/6_state.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>类式组件</title>
+  <title>state</title>
 </head>
 <body>
 
@@ -20,15 +20,22 @@
 
   <script type="text/babel">
     // 创建类式组件
-    class MyComponent extends React.Component {
+    class Weather extends React.Component {
+      constructor(props) {
+        super(props)
+        // 初始化状态
+        this.state = {
+          isHot: true
+        }
+      }
+
       render() {
-        // render ———— 放在 类(MyComponent)的原型对象上，供实例使用
-        // 实例 ———— <MyComponent/> 
-        // render 中的this ———— 组件实例对象
-        return <h2>我是用类定义的组件（适用于【复杂组件】的定义）</h2>
+        // 读取状态
+        const { isHot } = this.state
+        return <h1>今天天气很{ isHot ? '炎热': '凉爽' }</h1>
       }
     }
-    ReactDOM.render(<MyComponent/>, document.getElementById('test'))
+    ReactDOM.render(<Weather/>, document.getElementById('test'))
   </script>
 
 </body>
