--- a/basic/pages/7_精简state.html
+++ b/basic/pages/7_精简state.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>state</title>
+  <title>精简state</title>
 </head>
 <body>
 
@@ -19,25 +19,20 @@
   <script type="text/javascript" src="../js/babel.min.js"></script>
 
   <script type="text/babel">
-    // 创建类式组件
     class Weather extends React.Component {
-      constructor(props) {
-        super(props)
-        // 初始化状态
-        this.state = {
-          isHot: true
-        }
-        this.changeWeather = this.changeWeather.bind(this)
+      state = {
+        isHot: true
       }
-      render() {
-        // 读取状态
-        const { isHot } = this.state
-        return <h1 onClick={this.changeWeather}>今天天气很{ isHot ? '炎热': '凉爽' }</h1>
-      }
-      changeWeather() {
+      changeWeather = () => {
         const isHot = this.state.isHot
         this.setState({ isHot: !isHot })
       }
+
+      render() {
+        const { isHot } = this.state
+        return <h1 onClick={this.changeWeather}>今天天气很{ isHot ? '炎热': '凉爽' }</h1>
+      }
+
     }
     ReactDOM.render(<Weather/>, document.getElementById('test'))
   </script>
