函数柯里化

--- a/basic/pages/17_函数柯里化.html
+++ b/basic/pages/17_函数柯里化.html
@@ -24,6 +24,17 @@
         实现多次接收参数最后统一处理的函数编码形式
 
     */
+
+    function sum(a) {
+      return b => {
+        return c => {
+          return a + b + c
+        }
+      }
+    }
+
+    sum(1)(3)(9)
+
     class Login extends React.Component {
       state = {
         userName: '',
